@@ -3,6 +3,7 @@ Changes for 2.2.1rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-7317] removed unused code in popup.php (Ivo)
 
 --------------------------------------------------------------------------------
 Changes for 2.2.0
